--- a/css/app.css
+++ b/css/app.css
@@ -54,13 +54,14 @@ h1 {
     padding-top: 5px;
     padding-right: 1px;
     width: 22px;
+    /* max-height: 25px; */
     height: auto;
 }
 
 .board td {
     color: black;
-    width: 25px;
-    height: 25px;
+    width: 33px;
+    height: 33px;
     text-align: center;
     font-size: 1em;
 }
